--- a/04-What's-The-Weather/style.css
+++ b/04-What's-The-Weather/style.css
@@ -118,10 +118,7 @@ body {
 }
 .sunPhases {
   /*BOX*/
-  /* background-color: rgba(127, 188, 224, 255); */
   background-color: rgba(140, 192, 231, 255);
-  /* background-color: rgba(74, 93, 115, 255); */
-
   width: 4cm;
   height: 3.3cm;
   border-radius: 13%;
@@ -148,7 +145,6 @@ body {
 
 .feels {
   background-color: rgba(140, 192, 231, 255);
-  /* align-items: center; */
   margin-top: 20px;
   width: 4cm;
   height: 2.5cm;
@@ -158,11 +154,9 @@ body {
   display: flex;
   align-items: center;
   text-align: left;
-  /* margin-top: 20px; */
 }
 .feelsLike img {
   height: 50px;
-  /* margin-right: 1px; */
   margin-top: 20px;
   margin-left: 13px;
 }
@@ -180,17 +174,17 @@ body {
 }
 
 #map {
-  /* flex:1 */
   width: 260px;
   height: 220px;
   margin-left: 40px;
   margin-right: 0px;
+  border-radius: 13%;
 }
-.map img {
+/* .map img {
   width: 250px;
   margin-left: 40px;
   margin-right: 0px;
-}
+} */
 
 .spinner {
   margin: 5rem auto;
