--- a/06-Validation-Form/style.css
+++ b/06-Validation-Form/style.css
@@ -57,6 +57,19 @@ body {
   margin-top: 20px;
   margin-bottom: 7px;
 }
+/* .btnDropDown {
+  width: 2.3cm;
+  height: 1cm;
+} */
+/* .inputPhone {
+  width: 6.9cm;
+  height: 1cm;
+  border-radius: 10px;
+  border-width: 2px;
+  margin-left: -15px;
+  justify-content: right;
+} */
+
 .inputBox {
   display: flex;
   justify-content: space-between;
