submit button functionality is added

--- a/06-Validation-Form/style.css
+++ b/06-Validation-Form/style.css
@@ -84,7 +84,7 @@ body {
   width: 9.5cm;
   height: 1cm;
   border-radius: 10px;
-  /* border-color: rgb(216, 216, 216); */
+  border-color: rgb(68, 68, 68);
   border-width: 2px;
 }
 
