error message added for invalid input

--- a/06-Validation-Form/style.css
+++ b/06-Validation-Form/style.css
@@ -52,11 +52,42 @@ body {
   text-align: center;
   font-size: 33px;
 }
-
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* margin-top: 20px; */
+  /* margin-bottom: 7px; */
+  text-align: center;
+}
 .name {
   margin-top: 20px;
   margin-bottom: 7px;
 }
+.error-message {
+  display: none;
+  margin-top: 20px;
+  margin-bottom: 7px;
+  margin-right: 33px;
+  color: red;
+}
+
+/* .error-message { */
+/* display: none;
+  color: red;
+  font-size: 12px;
+  position: absolute;
+  top: 40px;
+  left: 0; */
+/* display: none;
+  padding: 10px;
+  border: 2px solid #444444;  
+  background-color: #f8f8f8;  
+  border-radius: 5px;
+}
+.inputBox:hover .error-message {
+  display: inline-block;
+} */
 /* .btnDropDown {
   width: 2.3cm;
   height: 1cm;
