--- a/08-Notes/style.css
+++ b/08-Notes/style.css
@@ -32,16 +32,23 @@ body {
 }
 .heading {
   /* padding: 0 10px; */
-  font-size: 27px;
+  font-size: 15px;
 }
 .searchBar {
-  width: 7cm;
+  width: 7.8cm;
   /* margin-left: 10px; */
   height: 0.7cm;
-  margin-top: 15px;
+  margin-top: 8px;
+  background-color: rgb(188, 188, 188);
+  border: none;
+  border-radius: 10px;
   /* margin-top: -16px; */
   /* margin-bottom: 20px; */
   /* padding: 10px 10px; */
+}
+.searchBar::placeholder {
+  padding: 5px;
+  color: rgb(48, 48, 48);
 }
 
 .allNotesPanel {
