--- a/08-Notes/style.css
+++ b/08-Notes/style.css
@@ -77,6 +77,32 @@ body {
 }
 
 .bottomNavPanel {
-  background-color: rgb(255, 0, 0);
+  /* background-color: rgb(255, 0, 0); */
+  background-color: whitesmoke;
   height: 1.3cm;
+  display: flex;
+  /* justify-content: space-between;
+  text-align: center; 
+  position: relative; */
+  text-align: center;
+}
+
+.BtnNewLetter {
+  position: absolute;
+  margin-top: -1.5px;
+  margin-right: 10px;
+  right: 0;
+  height: 1cm;
+  font-size: 40px;
+  background-color: transparent;
+  border: none;
+}
+.countOfNotes {
+  position: absolute;
+  /* left: 50%;
+  transform: translateX(-50%);  */
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 18px;
+  text-align: center;
 }
