--- a/08-Notes/style.css
+++ b/08-Notes/style.css
@@ -115,7 +115,7 @@ body {
 .topNavigationBar {
   display: flex;
   height: 2cm;
-  background-color: aqua;
+  /* background-color: aqua; */
   align-items: center;
   justify-content: space-between;
   padding: 0 5px;
@@ -138,7 +138,7 @@ body {
 .titleOfNotePanel {
   display: flex;
   height: 2.5cm;
-  background-color: blue;
+  /* background-color: blue; */
   text-align: center;
   align-items: center;
   padding: 0 10px;
@@ -149,11 +149,13 @@ body {
   font-size: 30px;
   color: grey;
   width: 7.7cm;
+  background-color: transparent;
+  border: none;
 }
 .headingOfNote::placeholder {
   color: grey;
   font-size: 30px;
-  padding: 10px;
+  /* padding: 5px; */
 }
 .contentOfNotePanel {
   /* background-color: darkgrey; */
@@ -168,4 +170,6 @@ body {
   overflow: auto;
   font-size: 18px;
   padding: 10px;
+  background-color: transparent;
+  border: none;
 }
