--- a/08-Notes/style.css
+++ b/08-Notes/style.css
@@ -25,6 +25,9 @@ body {
   border-radius: 10px;
   /* display: grid; */
 }
+.frontPage {
+  display: grid;
+}
 
 .topPanel {
   display: grid;
@@ -51,15 +54,23 @@ body {
   padding: 5px;
   color: rgb(48, 48, 48);
 }
-
+.notes {
+  height: 11.7cm;
+}
 .allNotesPanel {
   background-color: rgb(188, 188, 188);
-  height: 11.7cm;
+  /* height: 11.7cm; */
+  max-height: 11.7cm;
   /* height: auto; */
   display: grid;
+  /* flex-direction: column; */
+  /* grid-template-rows: repeat(auto-fill, minmax(2.3cm, 1fr)); */
+  /* grid-template-rows: repeat(auto-fill, minmax(2.3cm, 2.3cm)); */
+  /* gap: 3cm; */
+  /* grid-auto-flow: row; */
   grid-gap: 2px;
-  /* grid-template-rows: repeat(auto-fill, minmax(1cm, 1fr)); */
-  /* gap: 1.7cm; */
+  /* grid-gap: 10px; */
+
   overflow: auto;
 }
 .note {
@@ -71,6 +82,8 @@ body {
   padding: 10px;
   align-items: center;
   margin: 0;
+
+  /* margin-bottom: 10px; */
   /* margin-top: 40px; */
 }
 .title {
@@ -82,6 +95,9 @@ body {
   background-color: whitesmoke;
   height: 1.3cm;
   display: flex;
+  /* position: absolute;
+  bottom: 0;
+  left: 50%; */
   /* justify-content: space-between;
   text-align: center; 
   position: relative; */
@@ -172,4 +188,8 @@ body {
   padding: 10px;
   background-color: transparent;
   border: none;
+}
+.contentOfNote::placeholder {
+  color: grey;
+  font-size: 18px;
 }
