--- a/08-Notes/style.css
+++ b/08-Notes/style.css
@@ -56,6 +56,7 @@ body {
 }
 .notes {
   height: 11.7cm;
+  background-color: rgb(188, 188, 188);
 }
 .allNotesPanel {
   background-color: rgb(188, 188, 188);
@@ -163,7 +164,7 @@ body {
 .headingOfNote {
   height: 1.7cm;
   font-size: 30px;
-  color: grey;
+  color: black;
   width: 7.7cm;
   background-color: transparent;
   border: none;
