bussines architecture added and some css

--- a/08-Notes/style.css
+++ b/08-Notes/style.css
@@ -59,6 +59,7 @@ body {
 .allNotesPanel {
   background-color: rgb(188, 188, 188);
   max-height: 11.7cm;
+  max-width: 8.45cm;
   display: grid;
   grid-gap: 2px;
   overflow: auto;
