--- a/09-Memory-Game/style.css
+++ b/09-Memory-Game/style.css
@@ -53,13 +53,54 @@ body {
   padding: 0;
   overflow: hidden;
   position: relative;
+
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
 }
+
+/* .first,
+.img,
+.backSide {
+  transform: rotateY(180deg);
+} */
+/* .backSide {
+  background-color: red;
+  transform: rotateY(0deg);
+
+}
+.backSide.hidden {
+  transform: rotateY(180deg);
+}
+
 .img {
   width: auto;
   height: 100%;
   position: absolute;
+  transform: rotateY(-180deg);
+
+}
+.img.hidden {
+  transform: rotateY(0deg);
+
 }
 
 .hidden {
   display: none;
+} */
+.img,
+.backSide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transition: transform 0.5s;
+}
+
+.backSide {
+  background-color: red;
+  transform: rotateY(180deg);
+}
+
+.hidden {
+  transform: rotateY(180deg);
 }
