--- a/09-Memory-Game/style.css
+++ b/09-Memory-Game/style.css
@@ -58,49 +58,49 @@ body {
   transform-style: preserve-3d;
 }
 
-/* .first,
-.img,
-.backSide {
-  transform: rotateY(180deg);
-} */
-/* .backSide {
-  background-color: red;
-  transform: rotateY(0deg);
-
-}
-.backSide.hidden {
-  transform: rotateY(180deg);
-}
-
-.img {
-  width: auto;
-  height: 100%;
-  position: absolute;
-  transform: rotateY(-180deg);
-
-}
-.img.hidden {
-  transform: rotateY(0deg);
-
-}
-
-.hidden {
-  display: none;
-} */
 .img,
 .backSide {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  transition: transform 0.5s;
+  transition: transform 1s;
 }
 
 .backSide {
-  background-color: red;
-  /* transform: rotateY(180deg); */
+  background-color: rgb(155, 155, 155);
 }
 
 .hidden {
   transform: rotateY(180deg);
+}
+
+.messagePanel {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 12cm;
+  width: 10cm;
+  background-color: rgb(169, 248, 12);
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+}
+
+.message {
+  margin-top: 100px;
+  font-size: 50px;
+}
+.playAgain {
+  width: 5cm;
+  height: 2.5cm;
+  border-radius: 10px;
+  background-color: cornflowerblue;
+  font-size: 20px;
+}
+
+.hiddenPanel {
+  display: none;
 }
