--- a/10-Trivia-Game/style.css
+++ b/10-Trivia-Game/style.css
@@ -62,6 +62,36 @@ body {
   font-size: 20px;
 }
 
+.messagePanel {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 12cm;
+  width: 8cm;
+  background-color: rgb(112, 169, 169);
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 20px;
+}
+.message {
+  font-size: 50px;
+}
+.score {
+  font-size: 40px;
+  color: white;
+}
+
+.playAgain {
+  height: 1.5cm;
+  width: 3cm;
+  background-color: rgb(154, 154, 39);
+  font-size: 20px;
+  border-radius: 10px;
+}
+
 .hidden {
   display: none;
 }
