--- a/11-Go-Game/style.css
+++ b/11-Go-Game/style.css
@@ -34,14 +34,31 @@ body {
   position: absolute;
   top: 5%;
   left: 5%;
+  /* padding: 1.5cm 1.5cm; */
   /* transform: translate(-50%, -50%); */
   /* background-color: antiquewhite; */
-  height: 13.5cm;
-  width: 13.5cm;
+  height: 13.35cm;
+  width: 13.35cm;
   display: grid;
   grid: auto / auto auto auto auto auto auto auto auto auto auto;
   border: 2.5px solid red;
 }
 .redGrid {
   border: 1.5px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: relative; */
+  /* padding: 0; */
+}
+
+.blueStone {
+  /* position: absolute; */
+  background-color: blue;
+  /* margin: 0px 0px 0px 0px; */
+  /* width: 90%;
+  height: 90%; */
+  height: 1.1cm;
+  width: 1.1cm;
+  border-radius: 50%;
 }
