images added and located on the DOM

--- a/12-MusicApp/style.css
+++ b/12-MusicApp/style.css
@@ -56,8 +56,15 @@ body {
 }
 
 .navPanel {
-  background-color: black;
+  /* background-color: black; */
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 70px;
 }
+.navBtn {
+  height: 1.5cm;
+}
+
 .soundBar {
   background-color: blue;
 }
