--- a/12-MusicApp/style.css
+++ b/12-MusicApp/style.css
@@ -23,7 +23,7 @@ body {
   width: 10cm;
   border-radius: 20px;
   display: grid;
-  grid-template-rows: 9cm 2cm 2.5cm 1cm auto;
+  grid-template-rows: 9cm 2cm 2cm 1.5cm auto;
 }
 
 .imagePanel {
@@ -67,6 +67,12 @@ body {
   align-items: center;
   padding: 0 15px;
   font-size: 20px;
+}
+.progressBar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
 }
 .soundBar {
   background-color: blue;
