--- a/12-MusicApp/style.css
+++ b/12-MusicApp/style.css
@@ -70,6 +70,15 @@ body {
 }
 .progressBar {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.songProgressbar {
+  width: 9cm;
+}
+.progressBar {
+  display: flex;
   align-items: center;
   justify-content: center;
   font-size: 25px;
