--- a/12-MusicApp/style.css
+++ b/12-MusicApp/style.css
@@ -167,11 +167,16 @@ body {
   background-color: blueviolet;
   width: 80%;
   align-items: center;
+  padding: 0 5px;
 }
 .rightSide {
   display: flex;
   background-color: brown;
   width: 20%;
+  justify-content: center;
+}
+.songName {
+  margin-left: 10px;
 }
 
 .currentlyPlayingSongPanel {
