long song titles issue is tackled

--- a/12-MusicApp/style.css
+++ b/12-MusicApp/style.css
@@ -61,9 +61,15 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
 .songTitle {
   font-size: 35px;
+  white-space: nowrap;
+  /* overflow: hidden; */
+  /* text-overflow: ellipsis;  */
+  /* display: inline-block; */
 }
+
 .songArtist {
   font-size: 25px;
 }
