some new stuff is added

--- a/12-MusicApp/style.css
+++ b/12-MusicApp/style.css
@@ -161,6 +161,7 @@ body {
   color: white;
   width: 9cm;
   max-width: 9cm;
+  white-space: nowrap;
   /* animation: scroll-left 12s linear infinite; */
   font-style: italic;
 }
