--- a/12-MusicApp/style.css
+++ b/12-MusicApp/style.css
@@ -191,12 +191,14 @@ body {
   font-size: 25px;
   color: white;
 }
-.albumSongs {
+.albumSongs,
+.resultsBox {
   background-color: rgb(110, 110, 110);
   overflow-y: auto;
   display: grid;
   grid-gap: 1px;
   max-width: 10cm;
+  grid-auto-rows: 2cm;
 }
 .songPanel {
   background-color: rgb(142, 142, 142);
